fixed spacing inconsistency

--- a/src/sass/imports/_general.scss
+++ b/src/sass/imports/_general.scss
@@ -41,7 +41,6 @@ h6 {
   color: _palette(primary);
   font-weight: bold;
   line-height: 1.2;
-  letter-spacing: 0.1em;
   margin: 1.66667rem 0 0.83333rem;
   text-rendering: optimizeLegibility;
 
